# modern-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: main.yaml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: template_test.py
{{ cookiecutter.project_slug }}/: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sanity-check.sh  tox.ini  {{ '.dockerignore' if cookiecutter.use_docker }}  {{ 'CITATION.cff ' if cookiecutter.add_citation }}  {{ 'Dockerfile' if cookiecutter.use_docker }}  {{ 'LICENSE'  if cookiecutter.license != 'none' }}
{{ cookiecutter.project_slug }}/.github/workflows/: main.yaml
{{ cookiecutter.project_slug }}/configs/: __init__.py  config.yaml
{{ cookiecutter.project_slug }}/tests/: conftest.py  file_test.py  script1_test.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: config.py  log.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/scripts/: script1.py
